@@ -1,8 +1,8 @@
 package com.alex.universitymanagementsystem.domain;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
 
@@ -11,50 +11,75 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
+import com.alex.universitymanagementsystem.domain.immutable.FiscalCode;
 import com.alex.universitymanagementsystem.domain.immutable.UserId;
 import com.alex.universitymanagementsystem.enum_type.RoleType;
 import com.alex.universitymanagementsystem.utils.Builder;
 
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Embedded;
 import jakarta.persistence.EmbeddedId;
 import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
 import jakarta.persistence.Inheritance;
+import jakarta.persistence.OneToOne;
 import jakarta.persistence.Table;
 
 @Entity
-@Table(name = "\"user\"")
+@Table(name = "\"users\"", schema = "public")
 @Inheritance(strategy = jakarta.persistence.InheritanceType.JOINED)
 public class User implements UserDetails {
 
     // instance variables
     @EmbeddedId
     protected UserId id;
+    @Column(name = "username", nullable = false, unique = true, length = 50)
     protected String username;
+    @Column(name = "password", nullable = false)
     protected String password;
-    protected String fullname;
+    @Column(name = "first_name", nullable = false, unique = false, length = 50)
+    protected String firstName;
+    @Column(name = "last_name", nullable = false, unique = false, length = 50)
+    protected String lastName;
+    @Column(name = "dob", nullable = false)
     protected LocalDate dob;
-    protected String street;
-    protected String city;
-    protected String state;
-    protected String zip;
+    @Embedded
+    @Column(name = "fiscal_code", nullable = false, unique = true, length = 16)
+    protected FiscalCode fiscalCode;
+    @Column(name = "phone", nullable = false, length = 15)
     protected String phone;
     protected RoleType role;
+    @OneToOne(cascade = {CascadeType.PERSIST, CascadeType.MERGE}, fetch = FetchType.EAGER, optional = false)
+    protected Address address;
 
     // default constructor
     public User() {}
 
-    // constructor
-    public User(Builder userBuilder, PasswordEncoder passwordEncoder) {
+    // constructors
+    public User(Builder builder, PasswordEncoder encoder) {
         this.id = new UserId(UUID.randomUUID());
-        this.username = userBuilder.getUsername();
-        this.password = passwordEncoder.encode(userBuilder.getPassword());
-        this.fullname = userBuilder.getFullname();
-        this.dob = userBuilder.getDob();
-        this.street = userBuilder.getStreet();
-        this.city = userBuilder.getCity();
-        this.state = userBuilder.getState();
-        this.zip = userBuilder.getZip();
-        this.phone = userBuilder.getPhone();
-        this.role = userBuilder.getRole();
+        this.username = builder.getUsername();
+        this.password = encoder.encode(builder.getPassword());
+        this.firstName = builder.getFirstName();
+        this.lastName = builder.getLastName();
+        this.dob = builder.getDob();
+        this.fiscalCode = new FiscalCode(builder.getFiscalCode().toUpperCase());
+        this.phone = (builder.getPhone() == null || builder.getPhone().isEmpty()) ? "N/A" : builder.getPhone();
+        this.role = builder.getRole();
+        this.address = new Address(builder.getStreet(), builder.getCity(), builder.getState(), builder.getZip());
+    }
+
+    public User(Builder builder) {
+        this.id = new UserId(UUID.randomUUID());
+        this.username = builder.getUsername();
+        this.firstName = builder.getFirstName();
+        this.lastName = builder.getLastName();
+        this.dob = builder.getDob();
+        this.fiscalCode = new FiscalCode(builder.getFiscalCode());
+        this.phone = (builder.getPhone() == null || builder.getPhone().isEmpty()) ? "N/A" : builder.getPhone();
+        this.role = builder.getRole();
+        this.address = new Address(builder.getStreet(), builder.getCity(), builder.getState(), builder.getZip());
     }
 
 
@@ -73,28 +98,20 @@ public class User implements UserDetails {
         return password;
     }
 
-    public String getFullname() {
-        return fullname;
+    public String getFirstName() {
+        return firstName;
+    }
+
+    public String getLastName() {
+        return lastName;
     }
 
     public LocalDate getDob() {
         return dob;
     }
 
-    public String getStreet() {
-        return street;
-    }
-
-    public String getCity() {
-        return city;
-    }
-
-    public String getState() {
-        return state;
-    }
-
-    public String getZip() {
-        return zip;
+    public FiscalCode getFiscalCode() {
+        return fiscalCode;
     }
 
     public String getPhone() {
@@ -103,6 +120,10 @@ public class User implements UserDetails {
 
     public RoleType getRole() {
         return role;
+    }
+
+    public Address getAddress() {
+        return address;
     }
 
 
@@ -115,28 +136,20 @@ public class User implements UserDetails {
         this.password = password;
     }
 
-    public void setFullname(String fullname) {
-        this.fullname = fullname;
+    public void setFirstName(String firstName) {
+        this.firstName = firstName;
+    }
+
+    public void setLastName(String lastName) {
+        this.lastName = lastName;
     }
 
     public void setDob(LocalDate dob) {
         this.dob = dob;
     }
 
-    public void setStreet(String street) {
-        this.street = street;
-    }
-
-    public void setCity(String city) {
-        this.city = city;
-    }
-
-    public void setState(String state) {
-        this.state = state;
-    }
-
-    public void setZip(String zip) {
-        this.zip = zip;
+    public void setFiscalCode(FiscalCode fiscalCode) {
+        this.fiscalCode = fiscalCode;
     }
 
     public void setPhoneNumber(String phone) {
@@ -147,30 +160,32 @@ public class User implements UserDetails {
         this.role = role;
     }
 
+    public void setAddress(Address address) {
+        this.address = address;
+    }
+
     // toString
     @Override
     public String toString() {
-        return "User{" +
+        return "User {" +
             "id=" + id +
             ", username='" + username + '\'' +
             ", password='" + password + '\'' +
-            ", fullname='" + fullname + '\'' +
+            ", firstName='" + firstName + '\'' +
+            ", lastName='" + lastName + '\'' +
             ", dob='" + dob + '\'' +
-            ", street='" + street + '\'' +
-            ", city='" + city + '\'' +
-            ", state='" + state + '\'' +
-            ", zip='" + zip + '\'' +
+            ", fiscalCode='" + fiscalCode.toString() + '\'' +
+            ", street='" + address.getStreet() + '\'' +
+            ", city='" + address.getCity() + '\'' +
+            ", state='" + address.getState() + '\'' +
+            ", zip='" + address.getZipCode() + '\'' +
             ", phoneNumber='" + phone + '\'' + '}';
     }
 
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return switch (role) {
-            case STUDENT -> Arrays.asList(new SimpleGrantedAuthority("ROLE_STUDENT"));
-            case PROFESSOR -> Arrays.asList(new SimpleGrantedAuthority("ROLE_PROFESSOR"));
-            default -> Arrays.asList(new SimpleGrantedAuthority("ROLE_ADMIN"));
-        };
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
@@ -197,21 +212,15 @@ public class User implements UserDetails {
     // equals and hashCode
     @Override
     public int hashCode() {
-        return Objects.hash(id, username, password, fullname, dob, street, city, state, zip, phone, role);
+        return Objects.hash(id);
     }
 
     @Override
-    public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (obj == null) return false;
-        if (getClass() != obj.getClass()) return false;
-        User other = (User) obj;
-        return Objects.equals(username, other.username) &&
-            Objects.equals(password, other.password) &&
-            Objects.equals(fullname, other.fullname) &&
-            Objects.equals(dob, other.dob) &&
-            Objects.equals(state, other.state) &&
-            Objects.equals(role, other.role );
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof User)) return false;
+        User other = (User) o;
+        return Objects.equals(id, other.id);
     }
 
 
